syntax = "proto3";

option java_multiple_files = true;
option java_package = "billing";

service BillingService {
  rpc CreateBillingAccount (BillingRequest) returns (BillingResponse);
  rpc GenerateBillForPatient (PatientBillingRequest) returns (PatientBillingResponse);
}

message PatientBillingRequest{
  string patientId = 1;
  float amount = 2;
}

message PatientBillingResponse{
  string billNumber = 1;
  float totalAmount = 2;
}

message BillingRequest{
  string patientId = 1;
  string name = 2;
  string email = 3;
}

message BillingResponse{
  string accountId = 1;
  string status = 2;
}
